--- a/slides/src/docs/theme/summit.css
+++ b/slides/src/docs/theme/summit.css
@@ -62,6 +62,10 @@ body {
   text-align: left;
 }
 
+.reveal h2 {
+   font-size: 32pt;
+}
+
 /*********************************************
  * LINKS
  *********************************************/
@@ -163,6 +167,7 @@ body {
    background:#F7F3DE;
    color: #00C489;
    font-size: 24pt;
+   z-index:-1;
 }
 
 #front-top {
@@ -192,5 +197,24 @@ body {
    color: #00C489;
    font-weight: bold;
    font-size: 32pt;
+}
+
+.pictureWrapper {
+   width: 100%;
+}
+
+.picture {
+   width: 100%;
+   position: absolute;
+   top: -50px;
+   right: 0px; 
+   z-index:2;
+   text-align: right; 
+}
+
+.picture img {
+   border: none !important;
+   background: none !important;
+   box-shadow: none !important;
 }
 
